# otus-cxx-developer-professional

./: 01-homework_2CMakeLists_8txt.html  01-homework_2README_8md.html  01-homework_2main_8cpp.html  01-homework_2test__version_8cpp.html  01-homework_2test__version_8cpp__incl.map  01-homework_2test__version_8cpp__incl.md5  02-homework_2CMakeLists_8txt.html  02-homework_2README_8md.html  02-homework_2cmake_2packaging_2CMakeLists_8txt.html  02-homework_2cmake_2version_2project_8cpp.html  02-homework_2cmake_2version_2project_8cpp__incl.map  02-homework_2cmake_2version_2project_8cpp__incl.md5  02-homework_2cmake_2version_2project_8h.html  02-homework_2cmake_2version_2project_8h__dep__incl.map  02-homework_2cmake_2version_2project_8h__dep__incl.md5  02-homework_2cmake_2version_2project_8h_source.html  02-homework_2test_2test__version_8cpp.html  02-homework_2test_2test__version_8cpp__incl.map  02-homework_2test_2test__version_8cpp__incl.md5  03-homework_2CMakeLists_8txt.html  03-homework_2README_8md.html  03-homework_2cmake_2packaging_2CMakeLists_8txt.html  03-homework_2cmake_2version_2project_8cpp.html  03-homework_2cmake_2version_2project_8cpp__incl.map  03-homework_2cmake_2version_2project_8cpp__incl.md5  03-homework_2cmake_2version_2project_8h.html  03-homework_2cmake_2version_2project_8h__dep__incl.map  03-homework_2cmake_2version_2project_8h__dep__incl.md5  03-homework_2cmake_2version_2project_8h_source.html  04-homework_2CMakeLists_8txt.html  04-homework_2README_8md.html  04-homework_2cmake_2packaging_2CMakeLists_8txt.html  04-homework_2cmake_2version_2project_8cpp.html  04-homework_2cmake_2version_2project_8cpp__incl.map  04-homework_2cmake_2version_2project_8cpp__incl.md5  04-homework_2cmake_2version_2project_8h.html  04-homework_2cmake_2version_2project_8h__dep__incl.map  04-homework_2cmake_2version_2project_8h__dep__incl.md5  04-homework_2cmake_2version_2project_8h_source.html  05-homework_2README_8md.html  (+287 more)
.github/workflows/: docs.yml  release.yml
01-homework/: CMakeLists.txt  README.md  main.cpp  version.h.in
02-homework/: CMakeLists.txt  README.md
02-homework/include/: ip.h  print.h
02-homework/src/: ip_filter.cpp
03-homework/: CMakeLists.txt  README.md
03-homework/include/: allocator.h  container.h  log.h
03-homework/src/: allocator.cpp
04-homework/: CMakeLists.txt  README.md
04-homework/include/: print_tuple.h
04-homework/src/: print_ip.cpp
05-homework/: CMakeLists.txt
05-homework/cmake/: compiler.cmake
05-homework/include/: icontroller.h  imodel.h  logger.h  model.h
05-homework/src/: main.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_21.js  all_22.js  all_23.js  all_24.js  all_25.js  all_26.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  (+66 more)
